Update GRU test, sql

--- a/2.test performances.ipynb
+++ b/2.test performances.ipynb
@@ -505,10 +505,14 @@
     "                dropout=dropout,\n",
     "                bidirectional=bidir\n",
     "            ).to(DEVICE)\n",
-    "            # train normally\n",
-    "            optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
-    "            for _ in range(epochs):\n",
-    "                _ = lstm_train(model, train_loader, criterion, optimizer, task_type=task_type)\n",
+    "\n",
+    "        elif function_name == \"gru\":\n",
+    "            model = GRUModel(input_size=input_size,\n",
+    "                          hidden_size=hidden_size,\n",
+    "                          num_layers=num_layers,\n",
+    "                          output_size=output_size,\n",
+    "                          dropout=dropout,\n",
+    "                          bidirectional=bidirectional).to(DEVICE)\n",
     "\n",
     "        elif function_name == \"rnn\":\n",
     "            model = RNNModel(\n",
@@ -519,9 +523,6 @@
     "                dropout=dropout,\n",
     "                bidirectional=bidir\n",
     "            ).to(DEVICE)\n",
-    "            optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
-    "            for _ in range(epochs):\n",
-    "                _ = lstm_train(model, train_loader, criterion, optimizer, task_type=task_type)\n",
     "\n",
     "        elif function_name == \"rnn-mean_hag\":\n",
     "            # HAG-based reservoir initialization\n",
@@ -586,10 +587,17 @@
     "                model.rnn.bias_hh_l0.copy_(torch.tensor(bias, dtype=torch.float32, device=DEVICE))\n",
     "                model.fc.weight.copy_(torch.tensor(Wout.T, dtype=torch.float32, device=DEVICE))\n",
     "                model.fc.bias.copy_(torch.tensor(bias_out, dtype=torch.float32, device=DEVICE))\n",
-    "\n",
     "        else:\n",
     "            raise ValueError(f\"Unknown function_name: {function_name}\")\n",
     "\n",
+    "\n",
+    "        # Train\n",
+    "        optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "        model = torch.compile(model)\n",
+    "        # train for a few epochs\n",
+    "        for _ in range(epochs):\n",
+    "            _ = lstm_train(model, train_loader, criterion, optimizer, task_type=task_type)\n",
+    "            \n",
     "        # evaluate\n",
     "        metric = lstm_evaluate(model, test_loader, task_type=task_type)\n",
     "        all_scores.append(metric)\n",
@@ -626,7 +634,7 @@
     "oranges = color_palette(\"Oranges\", 2)  # shades of orange\n",
     "greens = color_palette(\"Greens\", 2)    # shades of green\n",
     "reds = color_palette(\"Reds\", 2)    # shades of red\n",
-    "greys = color_palette(\"Greys\", 2)    # shades of greys\n",
+    "greys = color_palette(\"Greys\", 3)    # shades of greys\n",
     "\n",
     "# -- Map each function to its color --\n",
     "function_colors = {\n",
@@ -640,7 +648,8 @@
     "    'mean HAG':             oranges[0],\n",
     "    'variance HAG':         oranges[1],\n",
     "    'LSTM':                 greys[0],\n",
-    "    'RNN':                 greys[1],\n",
+    "    'RNN':                  greys[1],\n",
+    "#    'RNN-HAG':              greys[2],\n",
     "#    'diag EE':             reds[0],\n",
     "#    'diag EI':             reds[1],\n",
     "}\n",
@@ -654,22 +663,24 @@
     "    'IP +\\nAnti-Oja',\n",
     "    'mean HAG',\n",
     "    'variance HAG',\n",
-    "    'LSTM',\n",
     "    'RNN',\n",
+    "#    'RNN-HAG',\n",
+    "    'LSTM',\n",
     "#    'diag EE',\n",
     "#    'diag EI',\n",
     "]\n",
     "\n",
     "function_mapping = {\n",
-    "    'ip-anti-oja_fast': 'IP +\\nAnti-Oja',\n",
+    "    'random_ee':        'E-ESN',\n",
+    "    'random_ei':        'ESN',\n",
     "    'ip_correct':       'IP',\n",
     "    'anti-oja_fast':    'Anti-Oja',\n",
-    "    'desp':             'variance HAG',\n",
+    "    'ip-anti-oja_fast': 'IP +\\nAnti-Oja',\n",
     "    'hadsp':            'mean HAG',\n",
-    "    'random_ei':        'ESN',\n",
-    "    'random_ee':        'E-ESN',\n",
+    "    'desp':             'variance HAG',\n",
     "    'lstm_last':        'LSTM',\n",
     "    'rnn':              'RNN',\n",
+    "#    'rnn-mean_hag':     'RNN-HAG',\n",
     "#    'diag_ei':        'diag EI',\n",
     "#    'diag_ee':        'diag EE',\n",
     "}"
@@ -1203,7 +1214,7 @@
     "import os\n",
     "import pandas as pd \n",
     "\n",
-    "file_name = \"outputs/test_results/test_results_prediction.csv\"\n",
+    "file_name = \"outputs/test_results/test_results_classification.csv\"\n",
     "\n",
     "if 'file_name' not in locals() and 'file_name' not in globals():\n",
     "    file_name = \"outputs/test_results/test_results_prediction.csv\"  #  test_results_classification.csv or test_results_prediction.csv\n",
@@ -1254,7 +1265,7 @@
     "    df['Dataset'] = df['Dataset'].str.replace('JapaneseVowels', 'Japanese\\nVowels')\n",
     "\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "fig, ax = plt.subplots(figsize=(16, 6))\n",
     "\n",
     "datasets = df['Dataset'].unique()\n",
     "x = np.arange(len(datasets))  # The label locations\n",
@@ -1317,9 +1328,9 @@
     "import optuna\n",
     "import pandas as pd\n",
     "from performances.utility import camel_to_snake, retrieve_best_model\n",
-    "# Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\"\n",
+    "# Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"FSDD\", \"SpokenArabicDigits\", \"SPEECHCOMMANDS\"\n",
     "datasets = [\n",
-    "    \"Sunspot_daily\",\n",
+    "    \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"FSDD\", \"SpokenArabicDigits\", \"SPEECHCOMMANDS\"\n",
     "]\n",
     "\n",
     "# helper ────────────────────────────────────────────────────────────\n",
@@ -1337,13 +1348,13 @@
     "    return round(x, ndigits)          # ordinary decimal\n",
     "\n",
     "# main loop ─────────────────────────────────────────────────────────\n",
-    "for fn_name in [\"lstm_last\"]:\n",
-    "\n",
+    "for fn_name in [\"rnn\"]:\n",
     "    rows = []\n",
     "    for ds in datasets:\n",
+    "        prefix = \"lstm_tpe\" if ds == \"SPEECHCOMMANDS\" else \"new_tpe\"\n",
     "        study = retrieve_best_model(\n",
     "            fn_name, ds,\n",
-    "            is_multivariate=True, variate_type=\"multi\", data_type=\"normal\", prefix=\"new_tpe\"\n",
+    "            is_multivariate=True, variate_type=\"multi\", data_type=\"normal\", prefix=prefix\n",
     "        )\n",
     "        params = {k: smart_format(v) for k, v in study.best_trial.params.items()}\n",
     "\n",
@@ -1384,7 +1395,7 @@
     "    \"anti-oja_fast\", \"ip-anti-oja_fast\", \"hadsp\", \"desp\",\n",
     "]\n",
     "\n",
-    "OUTPUT_DIR = \"outputs\"\n",
+    "OUTPUT_DIR = \"outputs/best_hyperparameters\"\n",
     "OUTPUT_FILE = os.path.join(OUTPUT_DIR, \"best_cv_scores.csv\")\n",
     "\n",
     "# ------------------------------------------------------------------\n",
@@ -2608,7 +2619,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HAG_env",
+   "display_name": "hag_env",
    "language": "python",
    "name": "hag_env"
   },
