added gru to test

--- a/2.test performances.ipynb
+++ b/2.test performances.ipynb
@@ -396,7 +396,7 @@
     "\n",
     "from performances.esn_model_evaluation import compute_score\n",
     "from models.rnn import (\n",
-    "    LSTMModel, RNNModel,\n",
+    "    LSTMModel, RNNModel, GRUModel,\n",
     "    SequenceDataset, PrecomputedForecastDataset, make_sliding_windows,\n",
     "    pad_collate, BucketBatchSampler,\n",
     "    train as lstm_train,\n",
@@ -442,7 +442,7 @@
     "    nlayers    = hp.pop(\"num_layers\")\n",
     "    dropout    = hp.pop(\"dropout\")\n",
     "    \n",
-    "    if function_name in [\"lstm\", \"rnn\"]:\n",
+    "    if function_name in [\"lstm\", \"rnn\", \"lstm_last\", \"gru\"]:\n",
     "            hidden     = hp.pop(\"hidden_size\")\n",
     "            bidir      = hp.pop(\"bidirectional\")\n",
     "\n",
@@ -507,12 +507,14 @@
     "            ).to(DEVICE)\n",
     "\n",
     "        elif function_name == \"gru\":\n",
-    "            model = GRUModel(input_size=input_size,\n",
-    "                          hidden_size=hidden_size,\n",
-    "                          num_layers=num_layers,\n",
-    "                          output_size=output_size,\n",
-    "                          dropout=dropout,\n",
-    "                          bidirectional=bidirectional).to(DEVICE)\n",
+    "            model = GRUModel(\n",
+    "                input_size=D_in,\n",
+    "                hidden_size=hidden,\n",
+    "                num_layers=nlayers,\n",
+    "                output_size=D_out,\n",
+    "                dropout=dropout,\n",
+    "                bidirectional=bidir\n",
+    "            ).to(DEVICE)\n",
     "\n",
     "        elif function_name == \"rnn\":\n",
     "            model = RNNModel(\n",
@@ -649,6 +651,7 @@
     "    'variance HAG':         oranges[1],\n",
     "    'LSTM':                 greys[0],\n",
     "    'RNN':                  greys[1],\n",
+    "    'GRU':                  greys[2],\n",
     "#    'RNN-HAG':              greys[2],\n",
     "#    'diag EE':             reds[0],\n",
     "#    'diag EI':             reds[1],\n",
@@ -666,6 +669,7 @@
     "    'RNN',\n",
     "#    'RNN-HAG',\n",
     "    'LSTM',\n",
+    "    'GRU',\n",
     "#    'diag EE',\n",
     "#    'diag EI',\n",
     "]\n",
@@ -680,6 +684,7 @@
     "    'desp':             'variance HAG',\n",
     "    'lstm_last':        'LSTM',\n",
     "    'rnn':              'RNN',\n",
+    "    'gru':              'GRU',\n",
     "#    'rnn-mean_hag':     'RNN-HAG',\n",
     "#    'diag_ei':        'diag EI',\n",
     "#    'diag_ee':        'diag EE',\n",
@@ -1103,7 +1108,7 @@
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
     "\n",
-    "for dataset_name in [\"SPEECHCOMMANDS\"]:\n",
+    "for dataset_name in [\"FSDD\"]:\n",
     "    new_results = pd.DataFrame(columns=columns)\n",
     "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"FSDD\", \"SpokenArabicDigits\", \"SPEECHCOMMANDS\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
@@ -1115,12 +1120,13 @@
     "    # Simulate your data and loop for evaluation\n",
     "    \n",
     "    # \"random_ee\", \"random_ei\", \"diag_ee\", \"diag_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\", \"lstm_last\", \"rnn\"\n",
-    "    for function_name in [\"rnn\", \"rnn-mean_hag\"]:\n",
+    "    for function_name in [\"gru\"]:\n",
     "        print(function_name)\n",
     "\n",
     "        # dispatch to the correct evaluator\n",
-    "        if function_name in [\"lstm_last\", \"rnn\", \"rnn-mean_hag\"]:\n",
-    "            study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\", prefix=\"lstm_tpe\")\n",
+    "        if function_name in [\"lstm_last\", \"rnn\", \"rnn-mean_hag\", \"gru\"]:\n",
+    "            prefix = \"lstm_tpe\" if dataset_name == \"SPEECHCOMMANDS\" else \"new_tpe\"\n",
+    "            study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\", prefix=prefix)\n",
     "            scores = evaluate_dataset_on_test_rnn(\n",
     "                study,\n",
     "                dataset_name,\n",
@@ -2619,9 +2625,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hag_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "hag_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
