--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -40,7 +40,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Ensure output directory exists\n",
-    "os.makedirs(\"outputs/images\", exist_ok=True)\n",
+    "os.makedirs(\"outputs/figures\", exist_ok=True)\n",
     "\n",
     "# Configure PDF backend\n",
     "mpl.rcParams['pdf.fonttype'] = 42\n",
@@ -127,7 +127,7 @@
     "ax.text(0.02, 0.95, '(d)', transform=ax.transAxes, weight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
-    "path = \"outputs/images/hag_effect.pdf\"\n",
+    "path = \"outputs/figures/hag_effect.pdf\"\n",
     "fig.savefig(path, bbox_inches='tight')\n",
     "path"
    ]
