Update to figures

--- a/2.test performances.ipynb
+++ b/2.test performances.ipynb
@@ -694,7 +694,9 @@
   {
    "cell_type": "markdown",
    "id": "5e7479a5-29a8-435e-a7f4-ba7a59e7b9a7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Input matrix impact"
    ]
@@ -1475,7 +1477,9 @@
   {
    "cell_type": "markdown",
    "id": "e61a2af988df0f5e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Test scores"
    ]
@@ -1715,7 +1719,9 @@
   {
    "cell_type": "markdown",
    "id": "8ae919b11422d98a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Export best parameters"
    ]
@@ -2406,6 +2412,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.ticker import MaxNLocator, LogLocator, LogFormatter\n",
+    "\n",
+    "# ------------------------------------------------------------------\n",
+    "# imports (in case they weren't already)\n",
+    "# ------------------------------------------------------------------\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "\n",
+    "# ------------------------------------------------------------------\n",
+    "# parameters + data\n",
+    "# ------------------------------------------------------------------\n",
+    "df = pd.read_csv(\"outputs/metrics.csv\")\n",
+    "\n",
+    "datasets = [\"JapaneseVowels\", \"CatsDogs\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\"]\n",
+    "df = df[df[\"dataset\"].isin(datasets)].copy()\n",
+    "\n",
+    "# FIX 1: make the label column name match what pivot_table expects (\"dataset_label\")\n",
+    "# FIX 2: use df[\"dataset\"] (not data[\"dataset\"])\n",
+    "label_map = {\n",
+    "    \"SpokenArabicDigits\": \"Spoken\\nArabic\\nDigits\",\n",
+    "    \"SPEECHCOMMANDS\":     \"SPEECH\\nCOMMANDS\",\n",
+    "    \"JapaneseVowels\":     \"Japanese\\nVowels\",\n",
+    "}\n",
+    "df[\"dataset_label\"] = df[\"dataset\"].replace(label_map)\n",
+    "\n",
+    "# keep a label list in the same order as `datasets` for plotting/reindexing\n",
+    "dataset_labels = [label_map.get(d, d) for d in datasets]\n",
+    "\n",
+    "# Map function_name -> display name; fall back to function_name if mapping missing\n",
+    "if \"function_mapping\" in locals():\n",
+    "    df[\"Algorithm\"] = df[\"function_name\"].map(function_mapping).fillna(df[\"function_name\"])\n",
+    "else:\n",
+    "    df[\"Algorithm\"] = df[\"function_name\"]\n",
+    "\n",
+    "# Choose algorithm order (if not pre-defined)\n",
+    "if \"algos\" not in locals():\n",
+    "    algos = list(pd.Index(df[\"Algorithm\"].dropna().unique()))\n",
+    "\n",
+    "# Basic plotting params (safe defaults if not defined earlier)\n",
+    "fs_axis = locals().get(\"fs_axis\", 10)\n",
+    "fs_tick = locals().get(\"fs_tick\", 9)\n",
+    "\n",
+    "# Colors: use provided mapping if available; otherwise let Matplotlib choose defaults\n",
+    "function_colors = locals().get(\"function_colors\", {a: None for a in algos})\n",
+    "\n",
+    "# X positions for grouped bars\n",
+    "x = np.arange(len(dataset_labels))\n",
+    "width_bar = 0.8 / max(1, len(algos))\n",
+    "\n",
+    "metrics = [\n",
+    "    # \"inter_dists_mean\",\n",
+    "    # \"intra_dists_mean\",\n",
+    "    \"separability_ratios_mean\",\n",
+    "    \"silhouette_mean\",\n",
+    "    \"davies_bouldin_mean\",\n",
+    "    \"calinski_harabasz_mean\",\n",
+    "]\n",
+    "\n",
+    "error_metrics = [\n",
+    "    # \"inter_dists_std\",\n",
+    "    # \"intra_dists_std\",\n",
+    "    \"separability_ratios_std\",\n",
+    "    \"silhouette_std\",\n",
+    "    \"davies_bouldin_std\",\n",
+    "    \"calinski_harabasz_std\",\n",
+    "]\n",
     "\n",
     "# ---------- figure: 2×2 top + centered narrow bottom (e) --------------------\n",
     "fig = plt.figure(figsize=(9.6, 6.6))\n",
@@ -2423,6 +2498,7 @@
     "]\n",
     "\n",
     "# --- create a 1×3 sub-grid only for the bottom row; center col is panel (e)\n",
+    "RANK_WIDTH_FRAC = 1.15   # smaller => narrower panel (e)\n",
     "gs_bottom = gs[2, :].subgridspec(1, 3, width_ratios=[1.0, RANK_WIDTH_FRAC, 1.0], wspace=0.0)\n",
     "ax_rank   = fig.add_subplot(gs_bottom[0, 1])   # center = panel (e)\n",
     "# side “spacer” axes (hidden) so (e) is visually narrower\n",
@@ -2436,31 +2512,60 @@
     "for m, (metric, emetric) in enumerate(zip(metrics, error_metrics)):\n",
     "    ax = axes_top[m]\n",
     "\n",
-    "    mean_p = (df.pivot_table(index=\"dataset_label\", columns=\"Algorithm\", values=metric,  aggfunc=\"mean\")\n",
-    "                .reindex(index=datasets_labels, columns=algos))\n",
-    "    std_p  = (df.pivot_table(index=\"dataset_label\", columns=\"Algorithm\", values=emetric, aggfunc=\"mean\")\n",
-    "                .reindex(index=datasets_labels, columns=algos))\n",
+    "    mean_p = (df.pivot_table(index=\"dataset_label\", columns=\"Algorithm\", values=metric, aggfunc=\"mean\")\n",
+    "                .reindex(index=dataset_labels, columns=algos))\n",
+    "\n",
+    "    if emetric in df.columns:\n",
+    "        std_p = (df.pivot_table(index=\"dataset_label\", columns=\"Algorithm\", values=emetric, aggfunc=\"mean\")\n",
+    "                   .reindex(index=dataset_labels, columns=algos))\n",
+    "        use_yerr = True\n",
+    "    else:\n",
+    "        std_p = mean_p.copy()\n",
+    "        std_p.loc[:, :] = 0.0\n",
+    "        use_yerr = False\n",
+    "\n",
+    "    # --- Davies–Bouldin on log scale, with visible ticks ---\n",
+    "    is_db = (metric == \"davies_bouldin_mean\")\n",
+    "    if is_db:\n",
+    "        ax.set_yscale(\"log\")\n",
+    "        # positive floor for any 0/negatives so log scale is valid\n",
+    "        pos_vals = mean_p.to_numpy()\n",
+    "        pos_vals = pos_vals[np.isfinite(pos_vals) & (pos_vals > 0)]\n",
+    "        eps = float(pos_vals.min() * 0.5) if pos_vals.size else 1e-6\n",
+    "        # Log ticks + formatter so the scale is visible\n",
+    "        ax.yaxis.set_major_locator(LogLocator(base=10.0, numticks=6))\n",
+    "        ax.yaxis.set_minor_locator(LogLocator(base=10.0, subs=np.arange(2, 10) * 0.1, numticks=12))\n",
+    "        ax.yaxis.set_major_formatter(LogFormatter(base=10.0))\n",
+    "        ax.grid(axis='y', which='both', linestyle=':', linewidth=0.5, alpha=0.6)\n",
+    "    else:\n",
+    "        ax.yaxis.set_major_locator(MaxNLocator(nbins=4))\n",
+    "        ax.grid(axis='y', linestyle=':', linewidth=0.5, alpha=0.6)\n",
     "\n",
     "    for i, alg in enumerate(algos):\n",
     "        means  = mean_p[alg].to_numpy()\n",
-    "        errors = std_p[alg].to_numpy()\n",
+    "        errors = std_p[alg].to_numpy() if use_yerr else None\n",
+    "\n",
+    "        if is_db:\n",
+    "            means = np.where(~np.isfinite(means) | (means <= 0), eps, means)\n",
+    "            if use_yerr and errors is not None:\n",
+    "                errors = np.clip(errors, 0, means - eps)  # keep lower bar > 0\n",
+    "\n",
     "        ax.bar(x + i*width_bar, means, width_bar,\n",
-    "               label=alg, yerr=errors, capsize=2.5,\n",
+    "               label=alg, yerr=(errors if use_yerr else None),\n",
+    "               capsize=2.5 if use_yerr else 0.0,\n",
     "               color=function_colors.get(alg, None),\n",
-    "               error_kw={\"elinewidth\": 0.8, \"capthick\": 0.8})\n",
+    "               error_kw={\"elinewidth\": 0.8, \"capthick\": 0.8} if use_yerr else None)\n",
     "\n",
     "    ax.set_title(panel_labels[m], loc='left', fontsize=fs_axis, fontweight='bold', pad=2)\n",
     "\n",
     "    nice_name = metric.replace(\"_\", \" \").title()\n",
     "    if metric == \"davies_bouldin_mean\":\n",
-    "        nice_name = \"Davies–Bouldin (↓ better)\"\n",
+    "        nice_name = \"Davies–Bouldin\"\n",
     "    ax.set_ylabel(nice_name, fontsize=fs_axis)\n",
     "\n",
     "    ax.set_xticks(x + width_bar*(len(algos)-1)/2)\n",
-    "    ax.set_xticklabels(datasets_labels, fontsize=fs_tick)\n",
-    "    ax.tick_params(axis=\"y\", labelsize=fs_tick)\n",
-    "    ax.yaxis.set_major_locator(MaxNLocator(nbins=4))\n",
-    "    ax.grid(axis='y', linestyle=':', linewidth=0.5, alpha=0.6)\n",
+    "    ax.set_xticklabels(dataset_labels, fontsize=fs_tick)\n",
+    "    ax.tick_params(axis=\"y\", which=\"both\", labelsize=fs_tick)\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
     "\n",
@@ -2468,7 +2573,24 @@
     "        handles, labels = ax.get_legend_handles_labels()\n",
     "\n",
     "# --------------------------- panel (e): cumulative ranking -------------------\n",
-    "RANK_WIDTH_FRAC = 1.15   # smaller => narrower panel (e)\n",
+    "# If rank_sums isn't already provided, compute it from the metrics\n",
+    "if \"rank_sums\" not in locals():\n",
+    "    # Define which direction is \"better\" for each metric\n",
+    "    lower_is_better = {\"davies_bouldin_mean\"}\n",
+    "    ranks_per_alg = pd.Series(0.0, index=algos, dtype=float)\n",
+    "\n",
+    "    for metric in metrics:\n",
+    "        pivot = (df.pivot_table(index=\"dataset_label\", columns=\"Algorithm\", values=metric, aggfunc=\"mean\")\n",
+    "                   .reindex(index=dataset_labels, columns=algos))\n",
+    "        if pivot.empty:\n",
+    "            continue\n",
+    "        ascending = metric in lower_is_better  # True -> lower rank is better\n",
+    "        # rank within each dataset (row-wise), then sum ranks over datasets\n",
+    "        # method=\"average\" handles ties\n",
+    "        ranks = pivot.rank(axis=1, ascending=ascending, method=\"average\")\n",
+    "        ranks_per_alg = ranks_per_alg.add(ranks.sum(skipna=True), fill_value=0.0)\n",
+    "\n",
+    "    rank_sums = ranks_per_alg.sort_values()\n",
     "\n",
     "colors = [function_colors.get(alg, None) for alg in rank_sums.index]\n",
     "bars = ax_rank.bar(rank_sums.index, rank_sums.values, edgecolor='black', color=colors, linewidth=0.8)\n",
@@ -2491,7 +2613,7 @@
     "        f\"{int(round(val))}\",\n",
     "        ha='center', va='bottom', fontsize=fs_tick\n",
     "    )\n",
-    "    \n",
+    "\n",
     "# --------------------------- bigger legend on TOP ----------------------------\n",
     "LEGEND_FS        = 9.5    # larger legend text\n",
     "LEGEND_TITLE_FS  = 10.5\n",
@@ -2508,7 +2630,6 @@
     "# -------------------------- save vector outputs ------------------------------\n",
     "os.makedirs(\"outputs/figures\", exist_ok=True)\n",
     "fig.savefig(\"outputs/figures/Fig_cluster_metrics_panel.pdf\", bbox_inches=\"tight\")\n",
-    "\n",
     "plt.show()"
    ]
   },
@@ -2530,7 +2651,7 @@
     "# Sauvegarder le fichier modifié (optionnel)\n",
     "df.to_csv(\"outputs/metrics_rounded.csv\", index=False)\n",
     "\n",
-    "print(\"Fichier arrondi sauvegardé dans outputs/Metrics_rounded.csv\")"
+    "print(\"Fichier arrondi sauvegardé dans outputs/metrics_rounded.csv\")"
    ]
   },
   {
@@ -2638,39 +2759,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd7ce7dd-4826-4a68-ab44-66ef90f031de",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from performances.utility import camel_to_snake, retrieve_best_model\n",
     "from models.reservoir import init_matrices\n",
-    "from connexion_generation.hag import run_algorithm\n",
+    "from hag.hag import run_algorithm\n",
     "from scipy import sparse\n",
-    "\n",
-    "functions_order = [\n",
-    "    'E-ESN',\n",
-    "    'ESN',\n",
-    "    'IP',\n",
-    "    'Anti-Oja',\n",
-    "    'IP +\\nAnti-Oja',\n",
-    "    'mean HAG',\n",
-    "    'variance HAG',\n",
-    "#    'diag EE',\n",
-    "#    'diag EI',\n",
-    "]\n",
-    "\n",
-    "function_mapping = {\n",
-    "    'ip-anti-oja_fast': 'IP +\\nAnti-Oja',\n",
-    "    'ip_correct':       'IP',\n",
-    "    'anti-oja_fast':    'Anti-Oja',\n",
-    "    'desp':             'variance HAG',\n",
-    "    'hadsp':            'mean HAG',\n",
-    "    'random_ei':        'ESN',\n",
-    "    'random_ee':        'E-ESN',\n",
-    "    'diag_ei':        'diag EI',\n",
-    "    'diag_ee':        'diag EE',\n",
-    "}\n",
     "\n",
     "# List of datasets\n",
     "classification = [\n",
@@ -2686,7 +2781,7 @@
     "    \"Lorenz\",\n",
     "    \"Sunspot_daily\",\n",
     "]\n",
-    "datasets=classification\n",
+    "datasets=prediction\n",
     "\n",
     "\n",
     "# Initialize lists to store results and max values\n",
@@ -2808,23 +2903,50 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "from matplotlib import ticker\n",
     "\n",
-    "n_datasets = len(datasets)\n",
+    "# --- robust global range (clip outliers) ---\n",
+    "abs_vals = np.abs(all_values[np.isfinite(all_values)])\n",
+    "gmax = np.quantile(abs_vals, 0.995)                    # 99.5% clip; adjust if you want more/less contrast\n",
+    "linthresh = max(gmax * 0.02, 1e-8)                     # linear region around 0 (~2% of range)\n",
+    "\n",
+    "# symmetric log normalization around 0 (expands colors near zero)\n",
+    "norm = mcolors.SymLogNorm(linthresh=linthresh, vmin=-gmax, vmax=gmax, base=10)\n",
+    "\n",
+    "# a higher-contrast diverging cmap; 'RdBu_r' is crisper than 'seismic'\n",
+    "cmap = plt.get_cmap('RdBu_r')\n",
+    "\n",
+    "\n",
+    "# --- use the same order you trained with ---\n",
+    "functions_order = [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]\n",
+    "\n",
+    "n_datasets  = len(datasets)\n",
     "n_functions = len(functions_order)\n",
     "\n",
-    "# 1) Determine global min/max to center color scale around 0\n",
-    "# Flatten all Ws into one array to find overall min & max\n",
+    "# Safety check: did we compute one W per (dataset, function)?\n",
+    "expected = n_datasets * n_functions\n",
+    "if len(Ws) != expected:\n",
+    "    raise ValueError(\n",
+    "        f\"Mismatch: have {len(Ws)} W matrices for {n_datasets} datasets × {n_functions} functions \"\n",
+    "        f\"(expected {expected}). Ensure functions_order matches the training loop.\"\n",
+    "    )\n",
+    "\n",
+    "# (optional) embed TrueType fonts so PDF text is selectable\n",
+    "mpl.rcParams['pdf.fonttype'] = 42\n",
+    "mpl.rcParams['ps.fonttype']  = 42\n",
+    "\n",
+    "# --- global min/max across all Ws (so colors are comparable) ---\n",
     "all_values = []\n",
     "for W in Ws:\n",
     "    if hasattr(W, \"toarray\"):\n",
     "        W = W.toarray()\n",
     "    all_values.append(W.ravel())\n",
     "all_values = np.concatenate(all_values)\n",
-    "\n",
-    "global_abs_max = np.max(np.abs(all_values))  # largest absolute value\n",
+    "global_abs_max = np.max(np.abs(all_values))\n",
     "g_vmin, g_vmax = -global_abs_max, global_abs_max\n",
     "\n",
-    "# 2) Create a figure with one row per dataset and one column per function\n",
+    "# --- figure ---\n",
     "fig, axes = plt.subplots(\n",
     "    n_datasets, \n",
     "    n_functions, \n",
@@ -2833,49 +2955,38 @@
     "    sharey=True\n",
     ")\n",
     "\n",
-    "# Ensure axes is 2D even if n_datasets=1 or n_functions=1\n",
+    "# Ensure axes is 2D even if a dimension is 1\n",
     "if n_datasets == 1:\n",
     "    axes = np.array([axes])\n",
     "if n_functions == 1:\n",
     "    axes = np.array([axes]).T\n",
     "\n",
-    "idx = 0\n",
-    "im = None  # to store the last image for the colorbar\n",
+    "im = None\n",
     "for i in range(n_datasets):\n",
     "    for j in range(n_functions):\n",
+    "        idx = i * n_functions + j  \n",
     "        W = Ws[idx]\n",
-    "        idx += 1\n",
-    "        \n",
-    "        # Convert to dense if sparse\n",
     "        if hasattr(W, \"toarray\"):\n",
     "            W = W.toarray()\n",
-    "        \n",
-    "        # 3) Plot base heatmap, using a diverging colormap like 'bwr'\n",
-    "        #    and a symmetric vmin/vmax around 0\n",
-    "        local_abs_max = np.max(np.abs(W))\n",
-    "        vmin, vmax = -local_abs_max, local_abs_max\n",
-    "        \n",
+    "\n",
+    "        # draw heatmap using a symmetric global scale for comparability\n",
     "        im = axes[i, j].imshow(\n",
-    "            W, \n",
-    "            cmap='seismic', \n",
-    "            interpolation='nearest', \n",
-    "            vmin=vmin, \n",
-    "            vmax=vmax\n",
+    "            W,\n",
+    "            cmap=cmap,\n",
+    "            norm=norm,\n",
+    "            interpolation='nearest'\n",
     "        )\n",
-    "        \n",
-    "        # 4) Overlay zeros in white\n",
+    "        # overlay zeros in white\n",
     "        zero_mask = (W == 0)\n",
     "        axes[i, j].imshow(\n",
     "            np.ma.masked_where(~zero_mask, W),\n",
     "            cmap=mcolors.ListedColormap(['white']),\n",
     "            interpolation='nearest'\n",
     "        )\n",
-    "        \n",
-    "        # Remove per-subplot x/y labels\n",
+    "\n",
     "        axes[i, j].set_xlabel('')\n",
     "        axes[i, j].set_ylabel('')\n",
-    "        \n",
-    "        # Row label: dataset name on the left edge\n",
+    "\n",
     "        if j == 0:\n",
     "            axes[i, j].text(\n",
     "                -0.3, 0.5, datasets[i],\n",
@@ -2885,28 +2996,34 @@
     "                va='center',\n",
     "                fontsize=15\n",
     "            )\n",
-    "        \n",
-    "        # Column label: function name on top row\n",
     "        if i == 0:\n",
     "            axes[i, j].set_title(functions_order[j], fontsize=15)\n",
-    "            \n",
-    "        # 5) Add a colorbar for each heatmap\n",
-    "        #cbar = fig.colorbar(im, ax=axes[i, j], fraction=0.046, pad=0.04)\n",
-    "        #cbar.ax.tick_params(labelsize=10)\n",
-    "        \n",
-    "# 5) Add shared axis labels\n",
+    "\n",
+    "# shared labels\n",
     "fig.text(0.5, 0.005, 'Neurons', ha='center', va='center', fontsize=14)\n",
     "fig.text(0.015, 0.5, 'Neurons', ha='center', va='center', rotation='vertical', fontsize=14)\n",
     "\n",
-    "# Tight layout\n",
     "fig.tight_layout()\n",
     "\n",
-    "# Single colorbar on the right\n",
+    "# single colorbar\n",
     "cbar = fig.colorbar(im, ax=axes.ravel().tolist(), fraction=0.03, pad=0.01)\n",
     "cbar.set_label('Recurrent weight strength', fontsize=12)\n",
     "\n",
+    "# helpful symmetric ticks\n",
+    "tick_vals = np.array([ -gmax, -gmax/10, -linthresh, 0, linthresh, gmax/10, gmax ])\n",
+    "cbar.set_ticks(tick_vals)\n",
+    "cbar.ax.set_yticklabels([f'{t:.2g}' for t in tick_vals])\n",
     "\n",
-    "plt.savefig(f'connectivity_matrices.png', dpi=300, bbox_inches='tight')\n"
+    "if 'classification' in locals() and set(datasets).issubset(set(classification)):\n",
+    "    out_base = 'outputs/figures/connectivity_matrices_classification'\n",
+    "elif 'prediction' in locals() and set(datasets).issubset(set(prediction)):\n",
+    "    out_base = 'outputs/figures/connectivity_matrices_forecasting'\n",
+    "    \n",
+    "# save PDF\n",
+    "fig.savefig(f'{out_base}.pdf', bbox_inches='tight')\n",
+    "\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
