Renaming and preprocessing validation

--- a/2.test performances.ipynb
+++ b/2.test performances.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "\n",
     "#Preprocessing\n",
-    "from datasets.multivariate_generation import generate_multivariate_dataset\n",
+    "from datasets.spectral_decomposition import generate_multivariate_dataset\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from datasets.preprocessing import scale_data\n",
     "from datasets.preprocessing import add_noise\n",
