--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -133,6 +133,116 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a94a09e-0648-49a6-8a07-f2a0402dc283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import MultipleLocator\n",
+    "\n",
+    "# Ensure output directory exists\n",
+    "os.makedirs(\"outputs/figures\", exist_ok=True)\n",
+    "\n",
+    "# Configure PDF/text rendering\n",
+    "mpl.rcParams[\"pdf.fonttype\"] = 42\n",
+    "mpl.rcParams[\"ps.fonttype\"]  = 42\n",
+    "mpl.rcParams[\"figure.dpi\"]   = 150\n",
+    "\n",
+    "# Data\n",
+    "x = np.linspace(0, 3, 400)\n",
+    "delta_w = 0.2\n",
+    "before_span = (0.7, 1.0)\n",
+    "after_span  = (before_span[0] + delta_w, before_span[1] + delta_w)\n",
+    "\n",
+    "# Colors\n",
+    "orange = \"#E66100\"\n",
+    "yellow = \"#FFC100\"\n",
+    "gray   = \"#888888\"\n",
+    "blue   = \"#3251a8\"\n",
+    "\n",
+    "# Curves\n",
+    "y_tanh = np.tanh(x)\n",
+    "y_lin  = x\n",
+    "\n",
+    "# Segment points\n",
+    "x_before = np.linspace(*before_span, 100)\n",
+    "y_before = np.tanh(x_before)\n",
+    "x_after  = np.linspace(*after_span, 100)\n",
+    "y_after  = np.tanh(x_after)\n",
+    "\n",
+    "# Midpoints for annotations\n",
+    "start_x = 0.5 * (before_span[0] + before_span[1])\n",
+    "end_x   = 0.5 * (after_span[0] + after_span[1])\n",
+    "start_y = np.tanh(start_x)\n",
+    "end_y   = np.tanh(end_x)\n",
+    "\n",
+    "# Figure\n",
+    "fig, ax = plt.subplots(figsize=(6.8, 4.2))\n",
+    "\n",
+    "# Base curves (de-emphasized)\n",
+    "ax.plot(x, y_tanh, color=gray, lw=2, label=r\"$\\tanh(x)$\")\n",
+    "ax.plot(x, y_lin,  color=blue, lw=2, alpha=0.9, label=\"linear\")\n",
+    "\n",
+    "# Highlight operating regimes with rounded caps\n",
+    "ax.plot(x_before, y_before, color=orange, lw=4, solid_capstyle=\"round\",\n",
+    "        label=\"Operating regime (before)\")\n",
+    "ax.plot(x_after,  y_after,  color=yellow, lw=4, solid_capstyle=\"round\",\n",
+    "        label=\"Operating regime (after)\")\n",
+    "\n",
+    "# Mark endpoints\n",
+    "for xv, yv in [(before_span[0], np.tanh(before_span[0])),\n",
+    "               (before_span[1], np.tanh(before_span[1])),\n",
+    "               (after_span[0],  np.tanh(after_span[0])),\n",
+    "               (after_span[1],  np.tanh(after_span[1]))]:\n",
+    "    ax.plot(xv, yv, \"o\", ms=4, color=\"black\", zorder=3)\n",
+    "\n",
+    "# Δw: draw vertical guides + a clean horizontal double-arrow\n",
+    "guide_y = np.tanh(start_x) - 0.06\n",
+    "ax.vlines([start_x, end_x], guide_y-0.03, guide_y+0.03, color=gray, lw=1)\n",
+    "ax.annotate(\n",
+    "    \"\", xy=(end_x, guide_y), xytext=(start_x, guide_y),\n",
+    "    arrowprops=dict(arrowstyle=\"<->\", lw=1.8, color=gray)\n",
+    ")\n",
+    "ax.text(0.5*(start_x+end_x), guide_y+0.04, r\"$\\Delta w$\",\n",
+    "        color=gray, ha=\"center\", va=\"bottom\")\n",
+    "\n",
+    "# Labels & formatting\n",
+    "ax.set_xlabel(\"Input\")\n",
+    "ax.set_ylabel(\"Activation\")\n",
+    "\n",
+    "ax.set_xlim(0, 1.4)\n",
+    "ax.set_ylim(0, 1.08)\n",
+    "\n",
+    "# Ticks & grid\n",
+    "ax.xaxis.set_major_locator(MultipleLocator(0.2))\n",
+    "ax.xaxis.set_minor_locator(MultipleLocator(0.1))\n",
+    "ax.yaxis.set_major_locator(MultipleLocator(0.1))\n",
+    "ax.yaxis.set_minor_locator(MultipleLocator(0.05))\n",
+    "ax.grid(which=\"major\", linestyle=\"--\", linewidth=0.6, color=\"#dddddd\")\n",
+    "ax.grid(which=\"minor\", linestyle=\":\",   linewidth=0.4, color=\"#eeeeee\", alpha=0.8)\n",
+    "\n",
+    "# Clean up spines\n",
+    "ax.spines[\"top\"].set_visible(False)\n",
+    "ax.spines[\"right\"].set_visible(False)\n",
+    "\n",
+    "# Legend\n",
+    "leg = ax.legend(frameon=False, fontsize=\"small\", loc=\"lower right\", handlelength=3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "out_pdf = \"outputs/figures/hag_effect.pdf\"\n",
+    "out_png = \"outputs/figures/hag_effect.png\"\n",
+    "fig.savefig(out_pdf, bbox_inches=\"tight\")\n",
+    "fig.savefig(out_png, dpi=300, bbox_inches=\"tight\")\n",
+    "print(out_pdf)\n",
+    "print(out_png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "eb44384e-7cbc-4611-a015-e1c073f61aa9",
    "metadata": {},
@@ -186,7 +296,7 @@
     "from datasets.preprocessing import plot_classes_distribution\n",
     "\n",
     "step_ahead=5\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"MackeyGlass\"\n",
     "\n",
     "(is_instances_classification, is_multivariate, sampling_rate,\n",
     "     X_train_raw, X_test_raw, Y_train_raw, Y_test,\n",
@@ -286,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets.multivariate_generation import generate_multivariate_dataset\n",
+    "from datasets.spectral_decomposition import generate_multivariate_dataset\n",
     "\n",
     "# if it has use_spectral_representation, then it is multivariate\n",
     "if use_spectral_representation == True: \n",
